--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <h2>Projetos</h2>
             <div class="projetos-grid">
                 <div class="projeto">
-                    <p><h3>Nenhum Projeto</h3></p>
+                    <h3>Projeto robô segue linha</h3>
+                    <p>Projeto para construir um robô segue linha.Disponivel em <a href="https://zenodo.org/records/15529820">Zenodo</a></p>
                 </div>
             </div>
         </div>
